2006-03-06  Dalibor Topic <robilad@kaffe.org>

	* gnu/testlet/java/net/URI/UnicodeURI.java: New file.

2006-03-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/reflect/Constructor/toString.java: New file.
	* gnu/testlet/java/lang/reflect/Field/toString.java: New file.

2006-03-04  Robert Schuster  <robertschuster@fsfe.org>
	
	* gnu/testlet/javax/swing/text/PlainDocument/insertString.java:
	(testModifications): New test method.
	(testNewLine): Added checkpoint name.
	(testFilterNewLine): Added checkpoint name.
	(testArguments): Changed catch-clause to Exception, added instanceof
	for previous exception type.
	(prepare): Added new helper method.
	(checkElement): Added new helper method.
	(insert): Added new helper method.

2006-03-04  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/jce/TestOfHttps.java: 
	Fixed the copyright notice.
	(test): removed System.out.println().

2006-03-04  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/javax/swing/JEditorPane/setText.java: New test.

2006-03-02  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/java/net/URLConnection/Jar.java (test): 
	Added one more specialised test.

2006-03-01  Tom Tromey  <tromey@redhat.com>

	* .project, .externalToolBuilders/ConfigureMauve.launch: Updated
	configure builder.

2006-02-28  David Daney  <ddaney@avtrex.com>

	* gnu/testlet/java/net/URL/URLTest.java (test_Basics): Added a test.

2006-02-28  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/lang/ClassLoader/Resources.java: New file.

2006-02-28  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/newInstance.java (test6): New class.
	(test): Updated comment.  Run test6 test.

2006-02-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/AbstractDocument/BranchElement/getStartOffset.java:
	New test.
	* gnu/testlet/javax/swing/AbstractDocument/LeafElement/getStartOffset.java:
	New test.

2006-02-28  Roman Kennke  <kennke@aicas.com>
